--- a/config/locales/app.de.yml
+++ b/config/locales/app.de.yml
@@ -21,3 +21,11 @@ de:
       next: "Nächste Seite"
       last: "Letzte Seite"
       truncate: "…"
+  # Transliterations
+  i18n:
+    transliterate:
+      rule:
+        ä: "ae"
+        ü: "ue"
+        ö: "oe"
+        ß: "ss"
